# Andriod-test-mcp

./: .gitignore  README.md  pyproject.toml  server.py  strategies.yaml
core/: ast_walker.py  file_scanner.py  logger.py  session.py
docs/: instructions.html  qe-mcp-technical-spec.html  teststrategy.md
models/: plan.py  report.py
strategy/: base.py  registry.py
strategy/plugins/: __init__.py  android_compose_v1.py  python_pytest_v1.py
tests/: __init__.py  test_analyse_repo.py  test_file_scanner.py  test_registry.py  test_session.py
tools/: analyse_dependencies.py  analyse_repo.py  diff_coverage.py  enforce.py  export_report.py  generate_test_plan.py  get_generation_brief.py  get_report.py  list_strategies.py  load_strategy.py  router.py  validate_tests.py  watch_repo.py
